--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,7 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Heavy Specific
+# Ignore the output directory where the Heavy CLI generates its output files
+output/*
