--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@opentf/cli-pbar": "^0.7.2",
     "duck-duck-scrape": "^2.2.7",
     "jsdom": "^26.1.0",
     "mathjs": "^14.5.3",
