--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "demo": "bun run src/example-cli.ts",
+    "demo:simple": "bun run src/example-cli.ts --simple",
+    "dev": "bun run src/make-it-heavy.ts",
+    "dev:single": "bun run src/main.ts",
+    "dev:legacy": "bun run src/integration-example.ts --simple",
+    "start": "bun run index.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/jsdom": "^21.1.7"
@@ -12,10 +20,14 @@
   },
   "dependencies": {
     "@opentf/cli-pbar": "^0.7.2",
+    "boxen": "^8.0.1",
+    "cli-table3": "^0.6.5",
     "duck-duck-scrape": "^2.2.7",
     "jsdom": "^26.1.0",
     "mathjs": "^14.5.3",
     "openai": "^5.10.1",
+    "ora": "^8.2.0",
+    "picocolors": "^1.1.1",
     "zod": "^4.0.5"
   }
 }
