📝 docs(env.example): update environment configuration example
- provide clearer instructions for setting up the environment file
- add descriptions for new configuration options including DEBUG and URL

📦 build(MIGRATION-SUMMARY.md): add migration summary documentation

- document the complete refactor of the project
- outline major issues fixed and improvements made
- include details about architecture changes and results

📝 docs(README-NEW.md): create new README for the updated project

- provide comprehensive documentation for usage, features, and setup
- include installation instructions and examples for interaction

📝 docs(README-FIXED.md): update README with fixed issues and new features

- highlight major fixes and improvements
- clarify usage instructions and provide examples

📝 docs(STATUS-FIXED.md): add status documentation for the project

- summarize the current status of the project and resolved issues
- outline next steps and future improvements

🔧 chore(bun.lock): clean up lock file

- remove unused dependencies to streamline project setup

♻️ refactor(config.ts): update configuration validation with Valibot

- switch from Zod to Valibot for validation of environment variables
- improve type safety and validation rules for configuration properties

♻️ refactor(index.ts): remove deprecated entry point

- delete unused main entry point file to clean up the codebase

♻️ refactor(migration): delete legacy migration scripts

- remove outdated migration scripts that are no longer necessary

🔧 chore(tools/index.ts): update tools index to reflect removed tools

- remove references to unused tools including data analysis and project management tools

♻️ refactor(tests): remove obsolete testing files

- clean up the tests directory by removing outdated test files

🧪 test(tests): add new tests for updated features

- implement tests for new features and improvements to ensure stability
- cover critical paths and edge cases in the application logic

✨ feat(tools/

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,25 @@
-OPENROUTER_API_KEY="YOUR_API_KEY"
+# Make It Heavy JS - Environment Configuration
+# Copy this file to .env and fill in your values
 
-URL="https://openrouter.ai/api/v1"
+# OpenRouter API Configuration (Required)
+# Get your API key from: https://openrouter.ai/keys
+OPENROUTER_API_KEY=your_openrouter_api_key_here
 
-MODEL="moonshotai/kimi-k2"
+# Model Configuration (Optional)
+# Default: alibaba/qwen-turbo
+# Other options: google/gemini-pro, anthropic/claude-3-haiku, etc.
+MODEL=alibaba/qwen-turbo
+
+# OpenRouter Base URL (Optional)
+# Default: https://openrouter.ai/api/v1
+URL=https://openrouter.ai/api/v1
+
+# Debug Mode (Optional)
+# Set to 'true' to enable detailed logging
+# Default: false
+DEBUG=false
+
+# Example usage:
+# 1. Copy this file: cp .env.example .env
+# 2. Edit .env with your actual API key
+# 3. Run: bun run dev
